--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 ---
 layout: workshop
 root: .
-venue: FIXME      # brief name of host site without address (e.g., "Euphoric State University")
-address: FIXME    # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
-country: FIXME    # country (two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
-language: FIXME   # language (two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: FIXME     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
-humandate: FIXME  # human-readable date (e.g., "Feb 17-18, 2020")
-humantime: FIXME  # human-readable time (e.g., "9:00 am - 4:30 pm")
-startdate: FIXME  # use YYYY-MM-DD format like "2015-01-01"
-enddate: FIXME    # use YYYY-MM-DD format like" 2015-01-02"
-instructor: FIXME # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: FIXME     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: FIXME    # contact email address for workshop organizer, such as "grace@hopper.org"
-etherpad:         # optional (insert the URL for your Etherpad if you're using one)
+venue: University of Manitoba      # brief name of host site without address (e.g., "Euphoric State University")
+address: Winnipeg    # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
+country: ca    # country (two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
+language: en   # language (two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
+latlng: "49.807501, -97.136626"     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
+humandate: Sep 26,28 2015  # human-readable date (e.g., "Feb 17-18, 2020")
+humantime: "9:00 am - 4:30 pm" # human-readable time (e.g., "9:00 am - 4:30 pm")
+startdate: 2015-10-26  # use YYYY-MM-DD format like "2015-01-01"
+enddate: 2015-10-28    # use YYYY-MM-DD format like" 2015-01-02"
+instructor: ["Hossein Pourreza", "TBD"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: ["Grigory Shamov"]    # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+contact: hossein.pourreza@umanitoba.ca    # contact email address for workshop organizer, such as "grace@hopper.org"
+etherpad:  https://etherpad.mozilla.org/2015-10-26-umanitoba    # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
 <!--
