--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ address: Winnipeg    # street address of workshop (e.g., "123 Forth Street, Blim
 country: ca    # country (two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: en   # language (two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "49.807501, -97.136626"     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
-humandate: Sep 26,28 2015  # human-readable date (e.g., "Feb 17-18, 2020")
+humandate: Oct 26 and 28, 2015  # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: "9:00 am - 4:30 pm" # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2015-10-26  # use YYYY-MM-DD format like "2015-01-01"
 enddate: 2015-10-28    # use YYYY-MM-DD format like" 2015-01-02"
