--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ instructor: ["Hossein Pourreza", "TBD"] # list of names like ["Kay McNulty", "Be
 helper: ["Grigory Shamov"]    # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: hossein.pourreza@umanitoba.ca    # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad:  https://etherpad.mozilla.org/2015-10-26-umanitoba    # optional (insert the URL for your Etherpad if you're using one)
-eventbrite:       18938096356 (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
+eventbrite:       18938096356  # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
 <!--
   HEADER
