--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ eventbrite:       18938096356  # optional (insert the alphanumeric key for Event
 -->
 <p>
   <strong>Contact</strong>:
-  Please mail
+  Please email
   {% if page.contact %}
     <a href='mailto:{{page.contact}}'>{{page.contact}}</a>
   {% else %}
@@ -161,7 +161,7 @@ eventbrite:       18938096356  # optional (insert the alphanumeric key for Event
       <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
+      <tr> <td>13:00</td>  <td>Using WestGrid/Compute Canada resources</td> </tr>
       <tr> <td>14:30</td>  <td>Coffee</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
     </table>
@@ -281,17 +281,12 @@ eventbrite:       18938096356  # optional (insert the alphanumeric key for Event
     </ul>
   </div>
   <div class="col-md-6">
-    <h3>Managing Data with SQL</h3>
+    <h3>Using WestGrid/Compute Canada resources</h3>
     <ul>
-      <li>Reading and sorting data</li>
-      <li>Filtering with <code>where</code></li>
-      <li>Calculating new values on the fly</li>
-      <li>Handling missing values</li>
-      <li>Combining values using aggregation</li>
-      <li>Combining information from multiple tables using <code>join</code></li>
-      <li>Creating, modifying, and deleting data</li>
-      <li>Programming with databases</li>
-      <li><a href="{{site.swc_githubio}}/sql-novice-survey/reference.html">Reference...</a></li>
+      <li>Getting an account</li>
+      <li>Choosing a system</li>
+      <li>Preparing the environment</li>
+      <li>Submitting job and monitoring</li>
     </ul>
   </div>
 </div>
